[project]
name = "domain-watch"
version = "0.1.0"
description = "Watch target domains and auto-register them through Tencent Cloud."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "onepush>=1.8.1",
    "tencentcloud-sdk-python-domain>=3.1.65",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C4", "UP"]
